fix: navbar issue on mobile fix: virtual clock position add: collapse sidebar button

--- a/client/src/styles/Aside.css
+++ b/client/src/styles/Aside.css
@@ -54,3 +54,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
 }
+
+.collapse-arrow {
+    margin-right: 22px;
+    margin-bottom: 1px;
+}
